Commit for planId: 5